--- a/examples/templates/navbar.html
+++ b/examples/templates/navbar.html
@@ -1,3 +1,3 @@
-<ul menus tag=" 'navbar' " class="nav nav-pills">
-    <li ng-repeat="menu in menus"><a ui-sref="{{menu.state.name}}">{{menu.name}}</a></li>
+<ul menus="navbarNavItems" tag="navbar" class="nav nav-pills">
+    <li ng-repeat="menu in navbarNavItems"><a ui-sref="{{menu.state.name}}">{{menu.name}}</a></li>
 </ul>
